--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,9 @@
 :root {
   font-family: system-ui, sans-serif;
-  /* line-height: 1.5; */
-  /* font-weight: 400; */
+  font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffff;
   background-color: #242424;
 
   font-synthesis: none;
@@ -29,30 +28,36 @@ body {
   height: 100vh;
 }
 
-.card {
-  padding: 2em;
-}
-
 #app {
   width: 100%;
 }
 
-button {
+button,
+.button-like {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.5em 1em;
+  font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
+  text-align: center;
+  color: #ffffff;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover:enabled {
+button:disabled {
+  color: #808080;
+  cursor: inherit;
+}
+button:hover:enabled,
+.button-like:hover {
   border-color: #646cff;
 }
 button:focus,
-button:focus-visible {
+button:focus-visible,
+.button-like:focus,
+.button-like:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -64,7 +69,9 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
+  button,
+  .button-like {
+    color: #242424;
+    background-color: #f5f5f5;
   }
 }
